# quasipolynomials

./: ._.git  .gitignore  Dockerfile  README.md  README.template.md  TODO.md  build.sh  docs_manifest.json  fix_dummy.py  flake.nix  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml
ualbf-project/: .flake8  Cargo.toml  Makefile  ScratchCyclo.lean  SmtReconstructionAudit.md  TCB.md  TODO.md  TUNING.md  auditor.py  bounds_manifest.json  cert_util.py  metadata_manifest.json  proof_manifest.json  schema_manifest.json  semantic_verification_report.md  time_utils.py  verify_cert.py  verify_metadata.py
ualbf-project/lean4-proofs/: .gitignore  PATH_A_ANALYSIS.md  PATH_B_ANALYSIS.md  PATH_C_ANALYSIS.md  README.md  Scratch.lean  ScratchCyclo.lean  SmtReconstruction.lean  TODO.md  TestFFI.lean  UALBF.lean  Validator.lean  ffi.c  lake-manifest.json  lakefile.lean  test.lean
ualbf-project/lean4-proofs/SmtReconstruction/: AST.lean  Certificate.lean  Reconstruct.lean  Theories.lean
ualbf-project/lean4-proofs/UALBF/: Abundancy.lean  Basic.lean  Bipartition.lean  BloomFilter.lean  CorrectionFactor.lean  Cyclotomic.lean  FFI.lean  Fixed64.lean  ManifestConstants.lean  Obstruction.lean  Orthogonality.lean  SpecialFactors.lean  Valuation.lean
ualbf-project/lean4-proofs/UALBF/Compute/: Abundancy.lean  CorrectionFactor.lean
ualbf-project/lean4-proofs/UALBF/Engine/: Bipartition.lean  Bipartition3.lean  Mod5Bridge.lean  Obstruction.lean  SearchMonad.lean  SearchState.lean  SieveSoundness.lean
ualbf-project/lean4-proofs/UALBF/Math/: Bipartition.lean  Cyclotomic.lean  Obstruction.lean  SpecialFactors.lean  Valuation.lean
ualbf-project/lean4-proofs/UALBF/Pure/: Arithmetic.lean  CycloTest.lean  Cyclotomic.lean  CyclotomicAlgebra.lean  CyclotomicMain.lean  EulerProduct.lean  Fixed64.lean  RNS.lean  RationalBounds.lean  Zsigmondy.lean
ualbf-project/lean4-proofs/UALBF/QPN/: AbundancyBound.lean  BasicProperties.lean  Obstruction.lean  PoisonTrap.lean  PrasadSunitha.lean
ualbf-project/lean4-proofs/dummy_widgets/: lakefile.lean
ualbf-project/paper/: Makefile  TODO.md  ingest_cert.py  lean-setup.tex  main.tex  references.bib  references.bib.orig  test_ingest_cert.py
ualbf-project/paper/sections/: 01_introduction.tex  02_math_and_formalization.tex  03_bipartition_algorithm.tex  04_verified_engine.tex  05_results.tex  06_conclusion.tex  07_appendix.tex
ualbf-project/prototypes/: proto_violation.py  pyproject.toml
ualbf-project/rust-engine/: Cargo.toml  README.md  TODO.md  build.rs  engine_data_export.csv  execution_results.txt  fast_run.txt  final_run.txt  final_run4.txt  gui_out.txt  profile.json.template  proof_manifest.json  run_gui.py
ualbf-project/rust-engine/.cargo/: config.toml
ualbf-project/rust-engine/logs/: execution_results.txt
ualbf-project/rust-engine/src/: backbone.rs  bloom_filter.rs  c_shims.c  conflict_broadcaster.rs  dfs_tree.rs  distributed.rs  dummy_ffi.c  events.rs  exact_math.rs  ffi_generated.rs  gpu.rs  kernel.cl  kernel.metal  lattice.rs  lean_export.rs  lean_ffi.rs  lean_verification.rs  main.rs  manifest_constants.h  manifest_constants.rs  math_utils.rs  mathlib_stubs.c  metal_reflection.rs  obstruction.rs  policy.rs  profile.rs  proofwidgets_stubs.c  raycast.rs  residue.rs  schema_generated.rs  sieve.rs  state.rs  tiered.rs  trace.rs  types.rs  universal_bounds.rs  vectorized.rs  verus_proofs.rs  z3_pruner.rs
ualbf-project/rust-engine/src/unverified/: dummy_ffi.c  gpu.rs  mod.rs
ualbf-project/rust-engine/ualbf-macros/: Cargo.toml
ualbf-project/rust-engine/ualbf-macros/src/: lib.rs
ualbf-project/scripts/: .flake8  check_lean_fmt.sh  check_literals.py  export_lean_specs.py  generate_readme.py  inject_mocks.py  test_style_violation.py  validate_docs.py
ualbf-project/scripts/mock-bin/: npm
ualbf-project/tests/: test_bounds_validation.py  test_ingest_cert.py  test_tiered_quality_gates.py  test_verify_cert.py  test_verify_metadata.py
ualbf-project/verification-lib/: Cargo.toml  pyproject.toml
ualbf-project/verification-lib/src/: lib.rs
