[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ualbf"
version = "0.1.0"
dependencies = []

[tool.setuptools]
package-dir = {"" = "ualbf-project"}
py-modules = ["cert_util", "verify_cert", "auditor", "verify_metadata"]

[tool.black]
extend-exclude = 'scripts/|tests/|prototypes/|experimental/|\.lake'

[tool.mypy]
exclude = [
    'scripts/',
    'tests/',
    'prototypes/',
    'experimental/',
    '\.lake/'
]
