[package]
name = "ualbf_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rayon = "1.8"
primal = "0.3"
smallvec = { version = "1.13", features = ["serde"] }
prime_factorization = "1.0.5"
z3 = { version = "0.19", features = ["gh-release"] }
crossbeam-channel = "0.5"
ethnum = "1.5.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.11.0"
hex = "0.4.3"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
cc = "1"

[profile.dev]
incremental = false

[profile.release]
incremental = false
