[package]
name = "verification-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "verification_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["rand_core", "alloc", "zeroize"], optional = true }
hex = { version = "0.4.3", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.11.0", optional = true }
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }

[features]
signing = ["dep:ed25519-dalek", "dep:hex", "dep:rand", "dep:sha2"]
python = ["pyo3", "signing"]
